--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,3 +120,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+.subheader-text {
+  text-transform: lowercase;
+
+  &::first-letter {
+    text-transform: uppercase;
+  }
+}
